Implementacion de correciones

--- a/plantillas/Correo_codigo.html
+++ b/plantillas/Correo_codigo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Código de Verificación - UrbanNav</title>
+    <title>Código de cambio de contraseña - UrbanNav</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
